# sdlcross

./: CMakeLists.txt  main.c
android-project/: .gitignore  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/example/sdlcross/: MyActivity.java
android-project/app/src/main/res/values/: strings.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
